Update rescore context for 4x compression
Since rescore is supported for lucene engine,
update rescore context for 4x compression to
use 1x oversampling factor.

Signed-off-by: Vijayan B <balasvij@amazon.com>