@@ -5,8 +5,10 @@
 
 package org.opensearch.knn.index.mapper;
 
+import com.google.common.annotations.VisibleForTesting;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
+import org.opensearch.Version;
 import org.opensearch.core.common.Strings;
 import org.opensearch.knn.index.query.rescore.RescoreContext;
 
@@ -24,7 +26,7 @@ public enum CompressionLevel {
     NOT_CONFIGURED(-1, "", null, Collections.emptySet()),
     x1(1, "1x", null, Collections.emptySet()),
     x2(2, "2x", null, Collections.emptySet()),
-    x4(4, "4x", null, Collections.emptySet()),
+    x4(4, "4x", new RescoreContext(1.0f, false, true), Set.of(Mode.ON_DISK)),
     x8(8, "8x", new RescoreContext(2.0f, false, true), Set.of(Mode.ON_DISK)),
     x16(16, "16x", new RescoreContext(3.0f, false, true), Set.of(Mode.ON_DISK)),
     x32(32, "32x", new RescoreContext(3.0f, false, true), Set.of(Mode.ON_DISK)),
@@ -105,8 +107,13 @@ public enum CompressionLevel {
      *                  or equal to 1000, the default {@link RescoreContext} if greater, or {@code null} if the mode
      *                  is invalid.
      */
-    public RescoreContext getDefaultRescoreContext(Mode mode, int dimension) {
+    public RescoreContext getDefaultRescoreContext(Mode mode, int dimension, Version version) {
+        //TODO move this to separate class called resolver to resolve rescore context
         if (modesForRescore.contains(mode)) {
+            if( this == x4 && version.before(Version.V_3_1_0)){
+                // For index created before 3.1, context was always null and mode is empty
+                return null;
+            }
             // Adjust RescoreContext based on dimension
             if (dimension <= RescoreContext.DIMENSION_THRESHOLD) {
                 // For dimensions <= 1000, return a RescoreContext with 5.0f oversample factor
@@ -114,11 +121,15 @@ public enum CompressionLevel {
                     .oversampleFactor(RescoreContext.OVERSAMPLE_FACTOR_BELOW_DIMENSION_THRESHOLD)
                     .userProvided(false)
                     .build();
-            } else {
-                return defaultRescoreContext;
             }
+            return defaultRescoreContext;
         }
         return null;
+    }
+
+    @VisibleForTesting
+    RescoreContext getDefaultRescoreContext(Mode mode, int dimension){
+        return getDefaultRescoreContext(mode, dimension, Version.CURRENT);
     }
 
 }
